material login i registracija

--- a/src/main/resources/static/i18n/en-US.json
+++ b/src/main/resources/static/i18n/en-US.json
@@ -10,5 +10,9 @@
   "EMAIL": "?EMAIL",
   "VALIDATION_ERROR": {
     "REQUIRED":"Required"
-  }
+  },
+  "SIGN_IN":"?SIGN_IN",
+  "FORGOT_PASSWORD":"Forgot password?",
+  "SEND_MAIL":"?SEND_MAIL",
+  "SUBMIT":"?SUBMIT"
 }
