za korisnika preko /api ne smije password biti jsonignore, napraviti poslije kao za registraciju za korisnike preko java

--- a/src/main/resources/static/i18n/en-US.json
+++ b/src/main/resources/static/i18n/en-US.json
@@ -14,5 +14,6 @@
   "SIGN_IN":"?SIGN_IN",
   "FORGOT_PASSWORD":"Forgot password?",
   "SEND_MAIL":"?SEND_MAIL",
-  "SUBMIT":"?SUBMIT"
+  "SUBMIT":"?SUBMIT",
+  "JMBG":"?JMBG"
 }
