--- a/src/main/resources/static/i18n/en-US.json
+++ b/src/main/resources/static/i18n/en-US.json
@@ -16,5 +16,15 @@
   "SEND_MAIL":"?SEND_MAIL",
   "SUBMIT":"?SUBMIT",
   "JMBG":"?JMBG",
-  "RESET_PASSWORD":"?RESET_PASSWORD"
+  "RESET_PASSWORD":"?RESET_PASSWORD",
+  "DOCUMENT":{
+    "EXPIRES":"?EXPIRES",
+    "CREATED":"?CREATED",
+    "TEXT":"?TEXT",
+    "SIGNED":"?SIGNED",
+    "SIGNATURE":"?SIGNATURE"
+  },
+  "DELETE":"?DELETE",
+  "BUTTONS":"?BUTTONS",
+  "EDIT":"?EDIT"
 }
