--- a/src/main/resources/static/i18n/bs-Latn-BA.json
+++ b/src/main/resources/static/i18n/bs-Latn-BA.json
@@ -22,7 +22,8 @@
     "CREATED":"?Kreirano",
     "TEXT":"?Tekst",
     "SIGNED":"?Potpisano",
-    "SIGNATURE":"?Potpis"
+    "SIGNATURE":"?Potpis",
+    "UPDATED":"?UPDATED"
   },
   "DELETE":"?DELETE",
   "BUTTONS":"?BUTTONS",
