userInfo navbar predug nevidljiv

--- a/src/main/resources/static/i18n/bs-Latn-BA.json
+++ b/src/main/resources/static/i18n/bs-Latn-BA.json
@@ -39,5 +39,8 @@
   "TITLE":"Naziv",
   "ROLE":{
     "NEW":"Nova uloga"
-  }
+  },
+  "TODAY":"Danas",
+  "OLDER":"Starije",
+  "LOGOUT":"Odjava"
 }
