--- a/src/main/resources/static/i18n/en-US.json
+++ b/src/main/resources/static/i18n/en-US.json
@@ -1,27 +1,21 @@
 {
   "GREETING": "Hello World!",
   "EXAMPLE_TRANSLATION": "Example translation",
-  "REGISTRATION": "?REGISTRATION",
-  "USER_NAME": "?USER_NAME",
-  "PASSWORD": "?PASSWORD",
-  "REPEAT_PASSWORD":"?REPEAT_PASSWORD",
-  "FIRST_NAME":"?FIRST_NAME",
-  "LAST_NAME": "?LAST_NAME",
-  "EMAIL": "?EMAIL",
+  "REGISTRATION": "Registration",
+  "USER_NAME": "Username",
+  "PASSWORD": "Password",
+  "REPEAT_PASSWORD":"Repeat password",
+  "FIRST_NAME":"First name",
+  "LAST_NAME": "Last name",
+  "EMAIL": "Email",
   "VALIDATION_ERROR": {
     "REQUIRED":"Required"
   },
-  "SIGN_IN":"?SIGN_IN",
+  "SIGN_IN":"Sign in",
   "FORGOT_PASSWORD":"Forgot password?",
-  "SEND_MAIL":"?SEND_MAIL",
-  "SUBMIT":"?SUBMIT",
-  "RESET_PASSWORD":"?RESET_PASSWORD",
-  "EMAIL": "?EMAIL",
-  "REPEAT_PASSWORD":"?REPEAT_PASSWORD",
-  "FIRST_NAME":"?FIRST_NAME",
-  "LAST_NAME": "?LAST_NAME",
-  "USER_NAME": "?USER_NAME",
-  "PASSWORD": "?PASSWORD",
+  "SEND_MAIL":"Send email",
+  "SUBMIT":"Submit",
+  "RESET_PASSWORD":"Reset password",
   "JMBG":"?JMBG",
   "DOCUMENT":{
     "NAME":"?NAME",
@@ -33,7 +27,6 @@
     "UPDATED":"?UPDATED",
     "NEW":"?NEW_DOCUMENT",
     "EDIT":"?EDIT_DOCUMENT",
-    "UPDATED":"?UPDATED",
     "MY_DOCUMENTS":"My documents"
   },
   "USER":{
