loading na login

--- a/src/main/resources/static/i18n/bs-Latn-BA.json
+++ b/src/main/resources/static/i18n/bs-Latn-BA.json
@@ -119,5 +119,6 @@
   "LOGOUT":"Odjava",
   "ADDED": "Dodano",
   "MODIFIED": "Izmijenjeno",
-  "DELETED": " je obrisan"
+  "DELETED": " je obrisan",
+  "LOGIN_FAIL": "Login nije uspio"
 }
