--- a/src/main/resources/static/i18n/en-US.json
+++ b/src/main/resources/static/i18n/en-US.json
@@ -121,5 +121,7 @@
   "ADDED": "Added",
   "MODIFIED": "Modified",
   "DELETED": " is deleted",
-  "LOGIN_FAIL":"Login failed"
+  "LOGIN_FAIL":"Login failed",
+  "CHANGE_PASS":"Change password",
+  "NEW_PASS":"New password"
 }
